[gd_scene load_steps=17 format=2]

[ext_resource path="res://SCRIPTS/TutorialScreen.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/Triangle.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Circle.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/Bungee-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ASSETS/ButtonStyle.stylebox" type="StyleBox" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("BlackTransition:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1100, 40 ), Vector2( 1100, 693 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.392157, 0.478431, 0.745098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.466667, 0.466667, 0.466667, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color( 0.466667, 0.466667, 0.466667, 0.6 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.270588, 0.109804, 0.109804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.466667, 0.466667, 0.466667, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=8]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0431373, 0.2, 0.0509804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.25098, 0.278431, 0.247059, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=11]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="TutorialScreen" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Transition = SubResource( 1 )

[node name="BGColor" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 597.0
color = Color( 0.815686, 0.815686, 0.67451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicCube2" type="ColorRect" parent="Control"]
margin_left = 80.0
margin_top = 448.0
margin_right = 208.0
margin_bottom = 584.0
color = Color( 0.670588, 0.0509804, 0.121569, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BouncyCircle2" type="TextureRect" parent="Control"]
modulate = Color( 0, 0.462745, 0.478431, 0.392157 )
margin_left = 304.0
margin_top = 448.0
margin_right = 432.0
margin_bottom = 584.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashTriangle2" type="TextureRect" parent="Control"]
modulate = Color( 0.843137, 0.521569, 0.129412, 0.392157 )
margin_left = 528.0
margin_top = 448.0
margin_right = 656.0
margin_bottom = 584.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigSquare2" type="ColorRect" parent="Control"]
margin_left = 720.0
margin_top = 328.0
margin_right = 976.0
margin_bottom = 584.0
color = Color( 0.117647, 0.258824, 0.0627451, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicControls" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/BasicControls"]
margin_left = 248.0
margin_top = 120.0
margin_right = 776.0
margin_bottom = 424.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Control/BasicControls"]
margin_left = 256.0
margin_top = 128.0
margin_right = 768.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 4 )
text = "Movement
Left: A
Right: D
Jump: Spacebar

Switching:
Previous: q or left arrow
Next: e or right arrow"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicCube" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicCubeImage" type="ColorRect" parent="Control/BasicCube"]
margin_left = 80.0
margin_top = 448.0
margin_right = 208.0
margin_bottom = 584.0
color = Color( 0.670588, 0.0509804, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/BasicCube"]
modulate = Color( 0.670588, 0.0509804, 0.121569, 1 )
margin_left = 72.0
margin_top = 120.0
margin_right = 600.0
margin_bottom = 424.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Control/BasicCube"]
margin_left = 80.0
margin_top = 128.0
margin_right = 592.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 4 )
text = "The basic cube:

A regular cube
that can run and jump
-
just cant reach higher
places"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BouncyCircle" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="BouncyCircleImage" type="TextureRect" parent="Control/BouncyCircle"]
modulate = Color( 0, 0.462745, 0.478431, 1 )
margin_left = 304.0
margin_top = 448.0
margin_right = 432.0
margin_bottom = 584.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/BouncyCircle"]
modulate = Color( 0, 0.462745, 0.478431, 1 )
margin_left = 152.0
margin_top = 120.0
margin_right = 680.0
margin_bottom = 424.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Control/BouncyCircle"]
margin_left = 160.0
margin_top = 128.0
margin_right = 672.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 4 )
text = "The bouncy circle:

Very bouncy!
-
however,
Needs his cube friend
to move left and right"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DashTriangle" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="DashTriangleImage" type="TextureRect" parent="Control/DashTriangle"]
modulate = Color( 0.843137, 0.521569, 0.129412, 1 )
margin_left = 528.0
margin_top = 448.0
margin_right = 656.0
margin_bottom = 584.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/DashTriangle"]
modulate = Color( 0.843137, 0.521569, 0.129412, 1 )
margin_left = 232.0
margin_top = 120.0
margin_right = 760.0
margin_bottom = 424.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Control/DashTriangle"]
margin_left = 240.0
margin_top = 120.0
margin_right = 752.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 4 )
text = "The Dashing triangle:

Use left click to dash
towards your mouse
-
Stops mid air
turns back into basic
upon hitting wall"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigSquare" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="BigSquareImage" type="ColorRect" parent="Control/BigSquare"]
margin_left = 720.0
margin_top = 328.0
margin_right = 976.0
margin_bottom = 584.0
color = Color( 0.117647, 0.258824, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/BigSquare"]
modulate = Color( 0.117647, 0.258824, 0.0627451, 1 )
margin_left = 184.0
margin_top = 112.0
margin_right = 712.0
margin_bottom = 432.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Control/BigSquare"]
margin_left = 192.0
margin_top = 112.0
margin_right = 704.0
margin_bottom = 433.0
custom_fonts/font = SubResource( 4 )
text = "The big cube:

Large enough to break
any wooden obstacles
-
Cannot jump or move
Left/right.
Turns back to basic
After a slam"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 640.0
margin_top = 16.0
margin_right = 896.0
margin_bottom = 65.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Next"

[node name="Previous" type="Button" parent="."]
margin_left = 128.0
margin_top = 16.0
margin_right = 384.0
margin_bottom = 65.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Previous"

[node name="Skip" type="Button" parent="."]
margin_left = 448.0
margin_top = 24.0
margin_right = 576.0
margin_bottom = 56.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 320.0
margin_top = 192.0
margin_right = 704.0
margin_bottom = 320.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Let's go!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackTransition" type="ColorRect" parent="."]
margin_left = -28.0
margin_top = -57.0
margin_right = 1072.0
margin_bottom = 636.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
